# flwr-scholeai

./: .gitignore  README.md  compose.yml  pyproject.toml
data/curriculum_preferences/eval/: data-00000-of-00001.arrow  state.json
data/curriculum_preferences/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
data_generation/: Dockerfile  generate_data.py  prompts.py  pyproject.toml
flwr_scholeai/: __init__.py  client_app.py  server_app.py
