# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-scholeai"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]",
    "torch",
    "torchvision",
    "transformers",
    "trl",
    "datasets",
    "accelerate",
    "python-dotenv",
]
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "aybarsyazici"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "flwr_scholeai.server_app:app"
clientapp = "flwr_scholeai.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1
min-available-clients = 2
min-fit-clients = 2

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.grpc_max_message_length=6442450944

# Remote federation example for use with SuperLink
# [tool.flwr.federations.remote-federation]
# address = "<SUPERLINK-ADDRESS>:<PORT>"
# insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
grpc_max_message_length = 6442450944 