[project]
name = "curriculum-data-generator"
version = "0.1.0"
dependencies = [
    "httpx",         # For making requests to Ollama
    "datasets",      # To save data in the correct format
    "tqdm",          # For progress bars
    "openai",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"